Added Tests and GitHub Actions * Fixed transaction signing issues.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
-    "sourceMap": true
+    "declarationDir": "dist",
+    "declaration": true
   },
   "include": [
     "src/**/*.ts",
