--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -29,9 +29,11 @@
   },
   "homepage": "https://github.com/NestcoinCo/aws-kms-ethers-signer#readme",
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.6",
+    "@types/jest": "^28.1.4",
     "@types/node": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "5.21.0",
-    "@typescript-eslint/parser": "5.21.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.0",
+    "@typescript-eslint/parser": "^5.30.0",
     "eslint": "8.14.0",
     "eslint-config-google": "0.14.0",
     "eslint-config-prettier": "8.5.0",
@@ -40,7 +42,9 @@
     "eslint-plugin-n": "15.2.0",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-promise": "6.0.0",
+    "jest": "^28.1.2",
     "prettier": "2.6.2",
+    "ts-jest": "^28.0.5",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4"
   },
