--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@nestcoinco/aws-kms-ethers-signer",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Node.JS package for using KMS keys as Ethereum Accounts with ability to sign transactions and messages.",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
@@ -21,6 +22,13 @@
     "bsc",
     "ethereum",
     "ecdsa"
+  ],
+  "files": [
+    "dist",
+    "src",
+    "!*.spec.ts",
+    "*.ts",
+    "*.d.ts"
   ],
   "author": "Joseph T. Orilogbon <dev@nestcoin.com>",
   "license": "MIT",
