--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
     "ethers": "^6.13.3"
   },
   "dependencies": {
+    "@aws-sdk/client-kms": "^3.668.0",
     "asn1.js": "^5.4.1",
-    "aws-sdk": "^2.1167.0",
     "ethereumjs-util": "^7.1.5"
   }
 }
